--- a/style.css
+++ b/style.css
@@ -4,3 +4,27 @@
   font-weight: normal;
   text-decoration: inherit;
 }
+
+.search-border {
+  border-radius: 10.25rem !important;
+  -webkit-border-radius: 10.25rem !important;
+  -moz-border-radius: 10.25rem !important;
+  -ms-border-radius: 10.25rem !important;
+  -o-border-radius: 10.25rem !important;
+}
+.search-form {
+  border-radius: 10.25rem !important;
+  -webkit-border-radius: 10.25rem !important;
+  -moz-border-radius: 10.25rem !important;
+  -ms-border-radius: 10.25rem !important;
+  -o-border-radius: 10.25rem !important;
+}
+.search-submit {
+  color: sienna !important;
+  border-color: white !important;
+}
+.slider {
+}
+.slider-height {
+  background-color: #feeae9;
+}
