--- a/style.css
+++ b/style.css
@@ -20,11 +20,10 @@
   -o-border-radius: 10.25rem !important;
 }
 .search-submit {
-  color: sienna !important;
-  border-color: white !important;
+  color: whitesmoke !important;
+  border-color: transparent !important;
 }
-.slider {
-}
+
 .slider-height {
   background-color: #feeae9;
 }
